Fix transaction actions overlapping description

--- a/share/static/css/base-responsive/history.css
+++ b/share/static/css/base-responsive/history.css
@@ -19,9 +19,7 @@ div.history-container {
 }
 
 .transaction div.metadata span.actions {
- position: absolute;
- top: 0;
- right: 0;
+ float: right;
  padding: 0em;
  background: #ccc;
  text-align: right;
